[tool.poetry]
name = "profil3r"
version = "1.4.3"
description = "Find the profiles of a person on social networks, as well as their email addresses"
authors = ["Rog3rSm1th <r0g3r5@protonmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Rog3rSm1th/Profil3r"
repository = "https://github.com/Rog3rSm1th/Profil3r"
keywords = ["profil3r", "osint"]
classifiers = [
    "Environment :: Console",
]
include = [
    "LICENSE",
    "profil3r/app/core/ressources/*",
    "profil3r/config/config.json.template"
]

[tool.poetry.dependencies]
python = "^3.6"
pwnedpasswords = "^2.0.0"
requests = "^2.25.1"
Jinja2 = "^3.0.1"
argparse = "^1.4.0"
beautifulsoup4 = "^4.9.3"
PyInquirer = "1.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
profil3r = "profil3r.main:main"